CMakeLists.txt minor style fix.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,11 @@ find_package(Boost COMPONENTS system filesystem serialization unit_test_framewor
 include_directories(${Boost_INCLUDE_DIRS})
 list(APPEND libraries ${Boost_LIBRARIES})
 
-# yandex_contest_common yandex_contest_system
-list(APPEND libraries yandex_contest_common yandex_contest_system)
+# yandex_contest_*
+list(APPEND libraries
+    yandex_contest_common
+    yandex_contest_system
+)
 
 # Local
 include_directories(include)
