--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(${PROJECT_NAME} SHARED
     src/lib/filesystem/Device.cpp
     src/lib/filesystem/Directory.cpp
     src/lib/filesystem/SymLink.cpp
+    src/lib/filesystem/FIFO.cpp
     src/lib/filesystem/CreateFile.cpp
     src/lib/filesystem/Operations.cpp
     src/lib/detail/execution/AsyncProcessGroup.cpp
