CMakeLists.txt: add_binary_targets() integration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,22 +52,7 @@ add_library(${PROJECT_NAME} SHARED
 )
 target_link_libraries(${PROJECT_NAME} ${libraries})
 
-set(bin_srcs cli ctl)
-set(bin_targets)
-
-foreach(bin ${bin_srcs})
-    set(trgt ${PROJECT_NAME}_${bin})
-    list(APPEND bin_targets ${trgt})
-    set(binprefix src/bin/${bin})
-    if(EXISTS ${CMAKE_SOURCE_DIR}/${binprefix}.cpp)
-        add_executable(${trgt} ${binprefix}.cpp)
-    elseif(EXISTS ${CMAKE_SOURCE_DIR}/${binprefix}.c)
-        add_executable(${trgt} ${binprefix}.c)
-    else()
-        message(SEND_ERROR "Source does not exist for target ${trgt}")
-    endif()
-    target_link_libraries(${trgt} ${PROJECT_NAME} ${libraries})
-endforeach()
+add_binary_targets(bin_targets cli ctl)
 
 # installation
 install(DIRECTORY include DESTINATION .)
