AsyncProcessGroupMultiple::multiple::benchmark related resources were moved into subfolder.

--- a/tests/resources/CMakeLists.txt
+++ b/tests/resources/CMakeLists.txt
@@ -1,6 +1,3 @@
 project(${PROJECT_NAME}_tests_resources)
 
-add_executable(posixClient posixClient.c)
-add_executable(posixEchoServer posixEchoServer.c)
-add_executable(cxxClient client.cpp)
-add_executable(cxxEchoServer echoServer.cpp)
+add_subdirectory(benchmark ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
