Useless boost_unit_test_framework dependency was removed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 2.8)
 
 include(YandexContestCommon)
 
-bunsan_use_boost(system filesystem serialization unit_test_framework program_options)
+bunsan_use_boost(system filesystem serialization program_options)
 
 bunsan_use_bunsan(common)
 bunsan_use(
