CMakeLists.txt refactoring.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,10 +43,11 @@ bunsan_add_shared_library(${PROJECT_NAME}
     src/lib/detail/execution/AsyncProcessGroup/ExecutionMonitor.cpp
     src/lib/detail/execution/AsyncProcessGroup/Streams.cpp
 )
+bunsan_use(${PROJECT_NAME})
 
-yandex_contest_add_binary_targets(bin_targets cli ctl)
+bunsan_add_cli_targets(cli_targets cli ctl)
 
 bunsan_install_headers()
-bunsan_install_targets(${PROJECT_NAME} ${bin_targets})
+bunsan_install_targets(${PROJECT_NAME} ${cli_targets})
 
 bunsan_include_tests()
