--- a/tests/resources/CMakeLists.txt
+++ b/tests/resources/CMakeLists.txt
@@ -3,3 +3,5 @@ project(${PROJECT_NAME}_tests_resources)
 add_subdirectory(benchmark ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
 
 add_executable(exec exec.c burn_cpu.c)
+
+bunsan_add_executable(listener listener.cpp)
