--- a/tests/resources/CMakeLists.txt
+++ b/tests/resources/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(benchmark ${CMAKE_CURRENT_BINARY_DIR}/benchmark)
 add_executable(exec exec.c burn_cpu.c)
 
 bunsan_add_executable(listener listener.cpp)
+bunsan_use_target(listener yandex_contest_invoker)
