Integrated with BunsanCMake targets setup.

--- a/tests/resources/CMakeLists.txt
+++ b/tests/resources/CMakeLists.txt
@@ -6,3 +6,4 @@ add_executable(exec exec.c burn_cpu.c)
 
 bunsan_add_executable(listener listener.cpp)
 bunsan_use_target(listener yandex_contest_invoker)
+bunsan_targets_finish_setup(listener)
